syntax = "proto3";

package core;

option go_package = "github.com/HLLC-MFU/HLLC-2025/backend/pkg/proto/generated;generated";

import "google/protobuf/timestamp.proto";

// ObjectID represents MongoDB ObjectID
message ObjectID {
    string value = 1;
}

// Base represents common database fields
message Base {
    ObjectID id = 1;
    google.protobuf.Timestamp created_at = 2;
    google.protobuf.Timestamp updated_at = 3;
    string created_by = 4;
    string updated_by = 5;
}

// Query represents common database query parameters
message Query {
    int32 page = 1;
    int32 limit = 2;
    string sort_by = 3;
    bool ascending = 4;
    map<string, string> filters = 5;
    string search_term = 6;
    repeated string search_fields = 7;
}

// QueryResult represents common database query results
message QueryResult {
    int32 total = 1;
    int32 page = 2;
    int32 limit = 3;
    repeated bytes items = 4;
}
